# Pyro-Desktop

compzilla/: .bzrignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in  run-xephyr.sh
compzilla/compzilla/: Makefile.am  chrome.manifest  compzilla.in  install.rdf  install.rdf.in
compzilla/compzilla/bak/: Makefile.in
compzilla/compzilla/bak/components/: loader.cpp
compzilla/compzilla/bak/libraries/: comp.c
compzilla/compzilla/chrome/content/: Compzilla.js  atoms.js  browserOverlay.js  browserOverlay.xul  content.js  debug.js  flickrdemo.js  flickrdemo.xul  frame.js  minimize.js  minmax.js  nihanim.js  overlay.js  overlay.xul  picker.js  prompt.js  scale-test.html  scale.js  start.js  start.xul  start2.js  start2.xul  util.js  windowStack.js  workarea.js  xprops.js
compzilla/compzilla/chrome/locale/en-US/: browserOverlay.dtd  start.dtd
compzilla/compzilla/chrome/skin/: compzilla.css  desktop.html  flickrdemo.css
compzilla/compzilla/chrome/skin/meebo/: COPYING
compzilla/compzilla/components/: compzillaWindowManager.js
compzilla/compzilla/defaults/preferences/: prefs.js
compzilla/compzilla/public/: compzillaIControl.idl  compzillaIControlObserver.idl  compzillaIExtension.idl  compzillaIRenderingContext.idl  compzillaIWindow.idl  compzillaIWindowEvents.idl  compzillaIWindowManager.idl  compzillaIWindowObserver.idl
compzilla/compzilla/src/: Debug.h  XAtoms.h  compzillaControl.cpp  compzillaControl.h  compzillaEventManager.cpp  compzillaEventManager.h  compzillaExtension.cpp  compzillaExtension.h  compzillaIRenderingContextInternal.h  compzillaModule.cpp  compzillaRenderingContext.cpp  compzillaRenderingContext.h  compzillaRenderingContextFx2.cpp  compzillaRenderingContextFx2.h  compzillaWindow.cpp  compzillaWindow.h  compzillaWindowEvents.cpp  compzillaWindowEvents.h  nsKeycodes.h
compzilla/gecko-sdk/: README
compzilla/gecko-sdk/include/: nsIDocShell.h  nsIXPCSecurityManager.h
compzilla/tests/: focuscanvas.html  scale-test.html  testclone.html
patches/: expose-InvalidateFrame.diff
