
AC_INIT(compzilla, 0.1, alex@beatniksoftware.com)

AC_CONFIG_SRCDIR(compzilla/install.rdf)
AC_CONFIG_HEADERS(config.h)

AM_INIT_AUTOMAKE

AM_MAINTAINER_MODE
AM_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_INSTALL


PKG_CHECK_MODULES(NSPR, firefox-nspr >= 1.5.0)

FIREFOX_XPCOM="firefox-xpcom >= 1.5.0"

GECKO_IDLDIR=`$PKG_CONFIG --variable=idldir "$FIREFOX_XPCOM"`
GECKO_LIBDIR=`$PKG_CONFIG --variable=libdir "$FIREFOX_XPCOM"`
GECKO_INCLUDEDIR=`$PKG_CONFIG --variable=includedir "$FIREFOX_XPCOM"`

XPIDL="$GECKO_LIBDIR"/xpidl
if ! test -f "$XPIDL"; then
   AC_MSG_ERROR([You need to have xpidl])
fi

AC_SUBST(GECKO_IDLDIR)
AC_SUBST(GECKO_LIBDIR)
AC_SUBST(GECKO_INCLUDEDIR)
AC_SUBST(XPIDL)


##
## Checks for Xdamage libraries
##
PKG_CHECK_MODULES(XDAMAGE, xdamage)


AC_OUTPUT([
Makefile
compzilla/Makefile
])


dnl ==========================================================================
echo "

        Compzilla $VERSION
	==================

        prefix:                   ${prefix}
        compiler:                 ${CC}
	xpidl:			  ${XPIDL}
	Gecko includes:		  ${GECKO_INCLUDEDIR}
	Gecko idl files:	  ${GECKO_IDLDIR}
        XDAMAGE_CFLAGS:           ${XDAMAGE_CFLAGS}
        XDAMAGE_LIBS:             ${XDAMAGE_LIBS}

        Now type 'make' to build $PACKAGE
"
